--- a/.github/workflows/auto-translate-readme.yml
+++ b/.github/workflows/auto-translate-readme.yml
@@ -18,9 +18,9 @@ jobs:
         uses: actions/checkout@v2  # Using an action to test the code
 
       - name: Run translation  # Step: start the translation
-        uses: mrf0rtuna4/Github-Readme-AutoTranslator@v1.2.0  # Using an action to translate
+        uses: SergTyapkin/Github-Readme-AutoTranslator@v1.0.0  # Using an action to translate
         env:
-          LANGS: 'english,italian,dutch,spanish,arabic,chinese (traditional),chinese (simplified),french,hindi,korean' # List of languages to be translated
+          LANGS: 'russian,english,italian,dutch,spanish,arabic,chinese (traditional),chinese (simplified),french,hindi,korean' # List of languages to be translated
 
       - name: Push to GitHub  # Step: Submit changes to GitHub
         uses: crazy-max/ghaction-github-pages@v3.1.0  # Using an action to publish to GitHub Pages
