--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 keyboard==0.13.5
 mouse==0.7.1
-Pillow==10.2.0
+Pillow==10.3.0
 PyAutoGUI==0.9.53
 PyQt5==5.15.10
 PyQt5_sip==12.13.0
 auto-py-to-exe==2.44.1
+numpy~=2.1.0
