Поправил конфиг actions для перевода

--- a/.github/workflows/auto-translate-readme.yml
+++ b/.github/workflows/auto-translate-readme.yml
@@ -4,11 +4,12 @@ on:
   push:  # Run when committing to a branch
     branches:
     - master # Set the name of your branch if required
-    paths: # Start translating only if readme file changed in current push
+    paths: # Start translating only if readme or this config changed in current push
     - 'README.MD'
     - 'README.md'
     - 'readme.md'
     - 'Readme.md'
+    - '.github/workflows/**'
 
 jobs:
   translate:  # Task name
